More UI changes

--- a/popup.html
+++ b/popup.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>Extension Pop-Up</title>
+    <meta charset="UTF-8" />
+    <title>EQ-lyzer</title>
     <script src="jquery.js"></script>
     <script src="popup.js"></script>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
-    <h2>EQ-lizer</h2>
-    <button id="analyze">analyze</button>
+    <h1>EQ-lyzer</h1>
+    <button id="analyze">Analyze</button>
     <div id="rating_5">
       <p>You are an amazing human being! &#129321;</p>
-        </div>
-      <div id="rating_4">
-          <p>Maybe add a spark of joy? &#128515;</p>
-      </div>
-      <div id="rating_3">
-          <p>Kinda neutral, do you want to be nicer? &#128578;</p>
-      </div>
-      <div id=rating_2>
-          <p>Kinda mean, could you phrase it a little bit nicer? &#128533;</p>
-      </div>
-      <div id=rating_1>
-          <p>Remember, you are talking to a person!&#128553;</p>
-      </div>
+    </div>
+    <div id="rating_4">
+      <p>Maybe add a spark of joy? &#128515;</p>
+    </div>
+    <div id="rating_3">
+      <p>Kinda neutral, do you want to be nicer? &#128578;</p>
+    </div>
+    <div id="rating_2">
+      <p>Kinda mean, could you phrase it a little bit nicer? &#128533;</p>
+    </div>
+    <div id="rating_1">
+      <p>Remember, you are talking to a person!&#128553;</p>
+    </div>
   </body>
 </html>
